--- a/src/ore/Cargo.toml
+++ b/src/ore/Cargo.toml
@@ -92,6 +92,7 @@ opentelemetry-otlp = { version = "0.17.0", optional = true }
 opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"], optional = true }
 console-subscriber = { version = "0.4.1", optional = true }
 sentry-tracing = { version = "0.38.1", optional = true }
+socket2 = { version = "0.5.10", optional = true }
 turmoil = { version = "0.7.0", optional = true }
 yansi = { version = "1.0.1", optional = true }
 
@@ -119,7 +120,7 @@ async = [
     "dep:tracing",
 ]
 bytes = ["dep:bytes", "compact_bytes", "smallvec", "smallvec/const_generics", "region", "tracing"]
-network = ["async", "dep:bytes", "smallvec", "dep:tracing"]
+network = ["async", "dep:bytes", "smallvec", "dep:socket2", "dep:tracing"]
 panic = ["sentry-panic"]
 process = ["libc"]
 region = ["dep:lgalloc", "dep:bytemuck"]
