ci: Fix failures when running on AWS
Seen in https://buildkite.com/materialize/nightly/builds/14592

Also needs https://github.com/MaterializeInc/i2/pull/3033

--- a/ci/nightly/pipeline.template.yml
+++ b/ci/nightly/pipeline.template.yml
@@ -1142,6 +1142,9 @@ steps:
         timeout_in_minutes: 240
         agents:
           queue: hetzner-x86-64-dedi-16cpu-64gb
+        env:
+          # New versions of Docker don't work with GHCR + local builds
+          MZ_GHCR: 0
         plugins:
           - ./ci/plugins/mzcompose:
               composition: platform-checks
@@ -1725,13 +1728,10 @@ steps:
         timeout_in_minutes: 45
         agents:
           queue: hetzner-aarch64-4cpu-8gb
-        env:
-          CI_ALLOW_LOCAL_BUILD: true
         plugins:
           - ./ci/plugins/mzcompose:
               composition: rqg
               args: ["simple-aggregates", "--seed=$BUILDKITE_JOB_ID"]
-              ci-builder: stable
 
       - id: rqg-db3-joins
         label: "RQG dbt3-joins workload"
@@ -1741,13 +1741,10 @@ steps:
         agents:
           # Runs into timeout/OoM on small agents
           queue: hetzner-aarch64-8cpu-16gb
-        env:
-          CI_ALLOW_LOCAL_BUILD: true
         plugins:
           - ./ci/plugins/mzcompose:
               composition: rqg
               args: ["dbt3-joins", "--seed=$BUILDKITE_JOB_ID"]
-              ci-builder: stable
         skip: "still hangs, even after 2 hours to finish"
 
       - id: rqg-lateral-joins
@@ -1757,13 +1754,10 @@ steps:
         timeout_in_minutes: 45
         agents:
           queue: hetzner-aarch64-4cpu-8gb
-        env:
-          CI_ALLOW_LOCAL_BUILD: true
         plugins:
           - ./ci/plugins/mzcompose:
               composition: rqg
               args: ["lateral-joins", "--seed=$BUILDKITE_JOB_ID"]
-              ci-builder: stable
 
       - id: rqg-subqueries
         label: "RQG subqueries workload"
@@ -1771,13 +1765,10 @@ steps:
         timeout_in_minutes: 45
         agents:
           queue: hetzner-aarch64-4cpu-8gb
-        env:
-          CI_ALLOW_LOCAL_BUILD: true
         plugins:
           - ./ci/plugins/mzcompose:
               composition: rqg
               args: ["subqueries", "--seed=$BUILDKITE_JOB_ID"]
-              ci-builder: stable
 
       - id: rqg-window-functions
         label: "RQG window functions workload"
@@ -1786,13 +1777,10 @@ steps:
         timeout_in_minutes: 45
         agents:
           queue: hetzner-aarch64-4cpu-8gb
-        env:
-          CI_ALLOW_LOCAL_BUILD: true
         plugins:
           - ./ci/plugins/mzcompose:
               composition: rqg
               args: ["window-functions", "--seed=$BUILDKITE_JOB_ID"]
-              ci-builder: stable
 
       - id: rqg-wmr
         label: "RQG WMR workload"
@@ -1800,15 +1788,12 @@ steps:
         timeout_in_minutes: 45
         agents:
           queue: hetzner-aarch64-4cpu-8gb
-        env:
-          CI_ALLOW_LOCAL_BUILD: true
         plugins:
           - ./ci/plugins/mzcompose:
               composition: rqg
               # Postgres does not support WMR, so our only hope for a comparison
               # test is to use a previous Mz version via --other-tag=...
               args: ["wmr", "--seed=$BUILDKITE_JOB_ID", "--other-tag=common-ancestor"]
-              ci-builder: stable
 
       - id: rqg-banking
         label: "RQG banking workload"
@@ -1816,13 +1801,10 @@ steps:
         timeout_in_minutes: 60
         agents:
           queue: hetzner-aarch64-4cpu-8gb
-        env:
-          CI_ALLOW_LOCAL_BUILD: true
         plugins:
           - ./ci/plugins/mzcompose:
               composition: rqg
               args: ["banking", "--seed=$BUILDKITE_JOB_ID"]
-              ci-builder: stable
 
       - id: rqg-left-join-stacks
         label: "RQG left join stacks workload"
@@ -1830,13 +1812,10 @@ steps:
         timeout_in_minutes: 45
         agents:
           queue: hetzner-aarch64-4cpu-8gb
-        env:
-          CI_ALLOW_LOCAL_BUILD: true
         plugins:
           - ./ci/plugins/mzcompose:
               composition: rqg
               args: ["left-join-stacks", "--seed=$BUILDKITE_JOB_ID"]
-              ci-builder: stable
 
   - id: crdb-restarts
     label: "CRDB rolling restarts"
