--- a/src/persist-client/Cargo.toml
+++ b/src/persist-client/Cargo.toml
@@ -71,6 +71,7 @@ criterion = { version = "0.8.1", features = ["html_reports"] }
 datadriven = { version = "0.9.0", features = ["async"] }
 futures-task = "0.3.31"
 num_cpus = "1.17.0"
+rand = "0.9.2"
 tempfile = "3.23.0"
 
 [build-dependencies]
