--- a/deny.toml
+++ b/deny.toml
@@ -255,6 +255,10 @@ ignore = [
     "RUSTSEC-2024-0388",
     # The creator of the crate `paste` has stated in the [`README.md`](https://github.com/dtolnay/paste/blob/master/README.md) that this project is not longer maintained as well as archived the repository
     "RUSTSEC-2024-0436",
+    # Bincode is unmaintained, the team considers version 1.3.3 a complete version of bincode that is not in need of any updates.
+    "RUSTSEC-2025-0141",
+    # Older lru versions, used by aws-sdk-s3/mysql_async dependencies
+    "RUSTSEC-2026-0002",
 ]
 
 # Must be manually kept in sync with about.toml.
