Extract OidcAuthenticator trait from Frontegg Authenticator
We extract
- authenticate
- validate_access_token

Two methods used to authenticate HTTP and pgwire sessions out of the Frontegg authenticator. The goal is we can reuse these methods for a generic OIDC authenticator, used for self managed SSO

--- a/src/environmentd/Cargo.toml
+++ b/src/environmentd/Cargo.toml
@@ -43,6 +43,7 @@ mz-alloc = { path = "../alloc" }
 mz-alloc-default = { path = "../alloc-default", optional = true }
 mz-auth = { path = "../auth" }
 mz-authenticator = { path = "../authenticator" }
+mz-authenticator-types = { path = "../authenticator-types" }
 mz-aws-secrets-controller = { path = "../aws-secrets-controller" }
 mz-build-info = { path = "../build-info" }
 mz-adapter = { path = "../adapter" }
