--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "src/audit-log",
     "src/auth",
     "src/authenticator",
+    "src/authenticator-types",
     "src/avro",
     "src/aws-secrets-controller",
     "src/aws-util",
@@ -133,6 +134,7 @@ default-members = [
     "src/audit-log",
     "src/auth",
     "src/authenticator",
+    "src/authenticator-types",
     "src/avro",
     "src/aws-secrets-controller",
     "src/aws-util",
