--- a/src/frontegg-auth/Cargo.toml
+++ b/src/frontegg-auth/Cargo.toml
@@ -11,12 +11,14 @@ workspace = true
 
 [dependencies]
 anyhow = "1.0.100"
+async-trait = "0.1.89"
 base64 = "0.22.1"
 clap = { version = "4.5.23", features = ["wrap_help", "env", "derive"] }
 derivative = "2.2.0"
 futures = "0.3.31"
 jsonwebtoken = "9.3.1"
 lru = "0.16.3"
+mz-authenticator-types = { path = "../authenticator-types" }
 mz-ore = { path = "../ore", features = ["network", "metrics"] }
 mz-repr = { path = "../repr" }
 prometheus = { version = "0.14.0", default-features = false }
