--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -69,7 +69,7 @@ mz-tracing = { path = "../tracing" }
 mz-txn-wal = { path = "../txn-wal" }
 paste = "1.0"
 prometheus = { version = "0.14.0", default-features = false }
-protobuf-native = "0.3.2"
+protobuf-native = "0.3.3+26.1"
 proptest = { version = "1.9.0", default-features = false, features = ["std"] }
 proptest-derive = { version = "0.7.0", features = ["boxed_union"] }
 prost = { version = "0.13.5", features = ["no-recursion-limit"] }
