--- a/src/workspace-hack/Cargo.toml
+++ b/src/workspace-hack/Cargo.toml
@@ -46,7 +46,7 @@ bstr = { version = "1.12.1" }
 bytemuck = { version = "1.24.0", default-features = false, features = ["latest_stable_rust"] }
 bytes = { version = "1.10.1", features = ["serde"] }
 cast = { version = "0.3.0", default-features = false, features = ["std"] }
-chrono = { version = "0.4.41", features = ["serde"] }
+chrono = { version = "0.4.43", features = ["serde"] }
 clap = { version = "4.5.23", features = ["derive", "env", "string", "wrap_help"] }
 clap_builder = { version = "4.5.23", default-features = false, features = ["color", "env", "std", "string", "suggestions", "usage", "wrap_help"] }
 concurrent-queue = { version = "2.5.0" }
@@ -58,7 +58,7 @@ crossbeam-utils = { version = "0.8.21" }
 csv-async = { version = "1.3.1", features = ["tokio"] }
 darling_core = { version = "0.20.11", default-features = false, features = ["suggestions"] }
 dec = { version = "0.4.11", default-features = false, features = ["num-traits", "serde"] }
-deranged = { version = "0.3.11", default-features = false, features = ["powerfmt", "quickcheck", "serde", "std"] }
+deranged = { version = "0.5.5", features = ["powerfmt", "quickcheck", "serde"] }
 digest = { version = "0.10.7", features = ["mac", "oid", "std"] }
 either = { version = "1.15.0", features = ["use_std"] }
 event-listener = { version = "5.4.1" }
@@ -87,6 +87,7 @@ lock_api = { version = "0.4.14", features = ["serde"] }
 log = { version = "0.4.29", default-features = false, features = ["std"] }
 lru = { version = "0.12.5" }
 memchr = { version = "2.7.6" }
+mime_guess = { version = "2.0.5" }
 minimal-lexical = { version = "0.2.1", default-features = false, features = ["std"] }
 moka = { version = "0.12.12", features = ["future", "sync"] }
 mysql_async = { version = "0.36.1", default-features = false, features = ["binlog", "minimal", "native-tls-tls", "tracing"] }
@@ -120,20 +121,21 @@ rdkafka-sys = { git = "https://github.com/MaterializeInc/rust-rdkafka.git", feat
 regex = { version = "1.12.2" }
 regex-automata = { version = "0.4.13", default-features = false, features = ["dfa", "hybrid", "meta", "nfa", "perf", "std", "unicode"] }
 regex-syntax = { version = "0.8.8" }
-reqwest = { version = "0.12.28", features = ["blocking", "cookies", "json", "native-tls-vendored", "stream"] }
+reqwest = { version = "0.12.28", features = ["blocking", "cookies", "json", "multipart", "native-tls-vendored", "rustls-tls", "stream"] }
 schemars = { version = "1.1.0", features = ["uuid1"] }
 scopeguard = { version = "1.2.0" }
 semver = { version = "1.0.27", features = ["serde"] }
 serde = { version = "1.0.228", features = ["alloc", "derive", "rc"] }
 serde_core = { version = "1.0.228", features = ["alloc", "rc"] }
 serde_json = { version = "1.0.149", features = ["alloc", "arbitrary_precision", "float_roundtrip", "preserve_order", "raw_value"] }
+serde_with = { version = "3.12.0", features = ["base64"] }
 sha2 = { version = "0.10.9", features = ["asm", "oid"] }
 simd-adler32 = { version = "0.3.8", default-features = false, features = ["std"] }
 similar = { version = "2.7.0", features = ["inline", "unicode"] }
 smallvec = { version = "1.15.1", default-features = false, features = ["const_new", "serde", "union"] }
 subtle = { version = "2.6.1" }
 syn-f595c2ba2a3f28df = { package = "syn", version = "2.0.111", features = ["extra-traits", "full", "visit", "visit-mut"] }
-time = { version = "0.3.37", features = ["local-offset", "macros", "quickcheck", "serde-well-known"] }
+time = { version = "0.3.45", features = ["local-offset", "macros", "quickcheck", "serde-well-known"] }
 timely = { version = "0.25.1" }
 tokio = { version = "1.48.0", features = ["full", "test-util", "tracing"] }
 tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", features = ["serde", "with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
@@ -192,7 +194,7 @@ bytemuck = { version = "1.24.0", default-features = false, features = ["latest_s
 bytes = { version = "1.10.1", features = ["serde"] }
 cast = { version = "0.3.0", default-features = false, features = ["std"] }
 cc = { version = "1.2.52", default-features = false, features = ["parallel"] }
-chrono = { version = "0.4.41", features = ["serde"] }
+chrono = { version = "0.4.43", features = ["serde"] }
 clang-sys = { version = "1.8.1", default-features = false, features = ["clang_11_0", "runtime"] }
 clap = { version = "4.5.23", features = ["derive", "env", "string", "wrap_help"] }
 clap_builder = { version = "4.5.23", default-features = false, features = ["color", "env", "std", "string", "suggestions", "usage", "wrap_help"] }
@@ -205,7 +207,7 @@ crossbeam-utils = { version = "0.8.21" }
 csv-async = { version = "1.3.1", features = ["tokio"] }
 darling_core = { version = "0.20.11", default-features = false, features = ["suggestions"] }
 dec = { version = "0.4.11", default-features = false, features = ["num-traits", "serde"] }
-deranged = { version = "0.3.11", default-features = false, features = ["powerfmt", "quickcheck", "serde", "std"] }
+deranged = { version = "0.5.5", features = ["powerfmt", "quickcheck", "serde"] }
 digest = { version = "0.10.7", features = ["mac", "oid", "std"] }
 either = { version = "1.15.0", features = ["use_std"] }
 event-listener = { version = "5.4.1" }
@@ -234,6 +236,7 @@ lock_api = { version = "0.4.14", features = ["serde"] }
 log = { version = "0.4.29", default-features = false, features = ["std"] }
 lru = { version = "0.12.5" }
 memchr = { version = "2.7.6" }
+mime_guess = { version = "2.0.5" }
 minimal-lexical = { version = "0.2.1", default-features = false, features = ["std"] }
 moka = { version = "0.12.12", features = ["future", "sync"] }
 mysql_async = { version = "0.36.1", default-features = false, features = ["binlog", "minimal", "native-tls-tls", "tracing"] }
@@ -268,13 +271,14 @@ rdkafka-sys = { git = "https://github.com/MaterializeInc/rust-rdkafka.git", feat
 regex = { version = "1.12.2" }
 regex-automata = { version = "0.4.13", default-features = false, features = ["dfa", "hybrid", "meta", "nfa", "perf", "std", "unicode"] }
 regex-syntax = { version = "0.8.8" }
-reqwest = { version = "0.12.28", features = ["blocking", "cookies", "json", "native-tls-vendored", "stream"] }
+reqwest = { version = "0.12.28", features = ["blocking", "cookies", "json", "multipart", "native-tls-vendored", "rustls-tls", "stream"] }
 schemars = { version = "1.1.0", features = ["uuid1"] }
 scopeguard = { version = "1.2.0" }
 semver = { version = "1.0.27", features = ["serde"] }
 serde = { version = "1.0.228", features = ["alloc", "derive", "rc"] }
 serde_core = { version = "1.0.228", features = ["alloc", "rc"] }
 serde_json = { version = "1.0.149", features = ["alloc", "arbitrary_precision", "float_roundtrip", "preserve_order", "raw_value"] }
+serde_with = { version = "3.12.0", features = ["base64"] }
 sha2 = { version = "0.10.9", features = ["asm", "oid"] }
 simd-adler32 = { version = "0.3.8", default-features = false, features = ["std"] }
 similar = { version = "2.7.0", features = ["inline", "unicode"] }
@@ -282,8 +286,8 @@ smallvec = { version = "1.15.1", default-features = false, features = ["const_ne
 subtle = { version = "2.6.1" }
 syn-dff4ba8e3ae991db = { package = "syn", version = "1.0.109", features = ["extra-traits", "full", "visit", "visit-mut"] }
 syn-f595c2ba2a3f28df = { package = "syn", version = "2.0.111", features = ["extra-traits", "full", "visit", "visit-mut"] }
-time = { version = "0.3.37", features = ["local-offset", "macros", "quickcheck", "serde-well-known"] }
-time-macros = { version = "0.2.19", default-features = false, features = ["formatting", "parsing", "serde"] }
+time = { version = "0.3.45", features = ["local-offset", "macros", "quickcheck", "serde-well-known"] }
+time-macros = { version = "0.2.25", default-features = false, features = ["formatting", "parsing", "serde"] }
 timely = { version = "0.25.1" }
 tokio = { version = "1.48.0", features = ["full", "test-util", "tracing"] }
 tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", features = ["serde", "with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
@@ -324,6 +328,8 @@ openssl-sys = { version = "0.9.111", default-features = false, features = ["vend
 ring = { version = "0.17.14", features = ["std"] }
 rustix-d585fab2519d2d1 = { package = "rustix", version = "0.38.44", features = ["fs", "net", "process", "termios"] }
 rustix-dff4ba8e3ae991db = { package = "rustix", version = "1.0.7", features = ["event", "fs", "pipe", "process", "time"] }
+rustls = { version = "0.23.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
+tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "ring", "tls12"] }
 tower-http = { version = "0.6.8", default-features = false, features = ["follow-redirect"] }
 
 [target.x86_64-unknown-linux-gnu.build-dependencies]
@@ -340,6 +346,8 @@ openssl-sys = { version = "0.9.111", default-features = false, features = ["vend
 ring = { version = "0.17.14", features = ["std"] }
 rustix-d585fab2519d2d1 = { package = "rustix", version = "0.38.44", features = ["fs", "net", "process", "termios"] }
 rustix-dff4ba8e3ae991db = { package = "rustix", version = "1.0.7", features = ["event", "fs", "pipe", "process", "time"] }
+rustls = { version = "0.23.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
+tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "ring", "tls12"] }
 tower-http = { version = "0.6.8", default-features = false, features = ["follow-redirect"] }
 
 [target.x86_64-apple-darwin.dependencies]
@@ -352,7 +360,9 @@ native-tls = { version = "0.2.14", default-features = false, features = ["vendor
 ring = { version = "0.17.14", features = ["std"] }
 rustix-d585fab2519d2d1 = { package = "rustix", version = "0.38.44", features = ["fs", "net", "process", "termios"] }
 rustix-dff4ba8e3ae991db = { package = "rustix", version = "1.0.7", features = ["event", "fs", "pipe", "process", "time"] }
+rustls = { version = "0.23.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
 security-framework = { version = "2.10.0", features = ["alpn"] }
+tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "ring", "tls12"] }
 tower-http = { version = "0.6.8", default-features = false, features = ["follow-redirect"] }
 
 [target.x86_64-apple-darwin.build-dependencies]
@@ -365,7 +375,9 @@ native-tls = { version = "0.2.14", default-features = false, features = ["vendor
 ring = { version = "0.17.14", features = ["std"] }
 rustix-d585fab2519d2d1 = { package = "rustix", version = "0.38.44", features = ["fs", "net", "process", "termios"] }
 rustix-dff4ba8e3ae991db = { package = "rustix", version = "1.0.7", features = ["event", "fs", "pipe", "process", "time"] }
+rustls = { version = "0.23.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
 security-framework = { version = "2.10.0", features = ["alpn"] }
+tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "ring", "tls12"] }
 tower-http = { version = "0.6.8", default-features = false, features = ["follow-redirect"] }
 
 ### END HAKARI SECTION
