--- a/doc/user/data/self_managed/materialize_operator_chart_parameter.yml
+++ b/doc/user/data/self_managed/materialize_operator_chart_parameter.yml
@@ -686,7 +686,7 @@
   type: string
   notationtype: ""
   autodefault: ""
-  default: '`"v26.7.0-rc.1"`'
+  default: '`"v26.7.0"`'
   autodescription: The tag/version of the operator image to be used
   description: ""
   section: ""
