suppress aliases for skills

--- a/doc/user/config.skill.toml
+++ b/doc/user/config.skill.toml
@@ -26,3 +26,6 @@
 [params]
   # Sections to exclude from skill generation
   excludeFromSkill = ["releases", "self-managed", "about", "get-started"]
+
+[cascade]
+  aliases = []
