--- a/doc/user/data/examples/rbac-cloud/grant_roles.yml
+++ b/doc/user/data/examples/rbac-cloud/grant_roles.yml
@@ -47,8 +47,11 @@
     mz_system         | PUBLIC       |             |        | quickstart        | cluster     | USAGE
     ```
   test_results: |
+    materialize PUBLIC <null> <null> compute_cluster cluster CREATEDATAFLOW
+    materialize PUBLIC <null> <null> serving_cluster cluster CREATEDATAFLOW
     materialize PUBLIC mydb <null> public schema USAGE
     mz_system PUBLIC <null> <null> materialize database USAGE
+    mz_system PUBLIC <null> <null> quickstart cluster CREATEDATAFLOW
     mz_system PUBLIC <null> <null> quickstart cluster USAGE
     mz_system PUBLIC materialize <null> public schema USAGE
 
