--- a/doc/user/data/examples/alter_cluster.yml
+++ b/doc/user/data/examples/alter_cluster.yml
@@ -60,7 +60,7 @@
         The following `<with_option>`s are supported:
         | Option  | Description |
         |--------|-------------|
-        | `WAIT UNTIL READY(...)`    | ***Private preview.** This option has known performance or stability issues and is under active development.* {{< alter-cluster/alter-clusters-cmd-options >}} |
+        | `WAIT UNTIL READY(...)`    | ***Private preview.** This option has known performance or stability issues and is under activedevelopment.* {{< include-from-yaml data="examples/alter_cluster" name="wait-until-ready-cmd-option" >}} |
         | `WAIT FOR` |  ***Private preview.** This option has known performance or stability issues and is under active development.* A fixed duration to wait for the new replicas to be ready. This option can lead to downtime. As such, we recommend using the `WAIT UNTIL READY` option instead.|
 
 - name: "syntax-reset-to-default"
@@ -129,3 +129,25 @@
     - name: "`<cluster2>`"
       description: |
         The name of the second cluster.
+
+- name: "configure-cluster"
+  content: |
+    To direct queries to a specific cluster, [set the cluster at the role
+    level](/sql/alter-role) using the following SQL statement:
+
+    ```sql
+    ALTER ROLE <your_user> SET CLUSTER = <custom_cluster>;
+    ```
+
+    Replace `<your_user>` with the name of your Materialize role and `<custom_cluster>` with the name of the cluster you want to use.
+
+    Once set, all new sessions for that user will automatically run in the specified
+    cluster, eliminating the need to manually specify it in each query or
+    connection.
+
+- name: wait-until-ready-cmd-option
+  content: |
+    | Option | Description |
+    |--------|-------------|
+    | `TIMEOUT` | The maximum duration to wait for the new replicas to be ready. |
+    | `ON TIMEOUT` | The action to take on timeout. <br><ul><li><code>COMMIT</code> cuts over to the new replica regardless of its hydration status, which may lead to downtime.</li><li><code>ROLLBACK</code> removes the pending replica and returns a timeout error.</li></ul>Default: <code>COMMIT</code>. |
