Include --cleanDestinationDir to avoid having cruft

--- a/doc/user/config.skill.toml
+++ b/doc/user/config.skill.toml
@@ -8,7 +8,9 @@
 # by the Apache License, Version 2.0.
 #
 # config.skill.toml - Configuration overlay for generating Claude skill output.
-# Use with: hugo --config config.toml,config.skill.toml --disableKinds sitemap,robotsTXT,taxonomy
+# Use with: hugo --cleanDestinationDir  --config config.toml,config.skill.toml --disableKinds sitemap,robotsTXT,taxonomy
+
+publishDir = "public/markdown-docs"
 
 # Output only the skill format (markdown), not HTML
 [outputs]
