docs: refactor to remove unnecessary shortcodes(pt2)

--- a/doc/user/data/best_practices/two_tier_architecture.yml
+++ b/doc/user/data/best_practices/two_tier_architecture.yml
@@ -6,7 +6,7 @@ rows:
     Description: |
       **A dedicated cluster(s)** for [sources](/concepts/sources/).
 
-      {{% best-practices/architecture/upsert-source %}}
+      {{% include-from-yaml data="best_practices_details" name="architecture-upsert-source" %}}
 
   - "Tier": "**Compute/Transform + Serving cluster**"
     Description: |
