--- a/test/simulation/Cargo.toml
+++ b/test/simulation/Cargo.toml
@@ -7,10 +7,13 @@ rust-version.workspace = true
 [dependencies]
 anyhow = "1.0.100"
 async-trait = "0.1.89"
+clap = { version = "4.5.23", features = ["derive"] }
 futures = "0.3.31"
 mz-adapter-types.path = "../../src/adapter-types"
 mz-build-info.path = "../../src/build-info"
 mz-catalog.path = "../../src/catalog"
+mz-cluster-client.path = "../../src/cluster-client"
+mz-compute.path = "../../src/compute"
 mz-controller.path = "../../src/controller"
 mz-dyncfgs.path = "../../src/dyncfgs"
 mz-environmentd = { path = "../../src/environmentd", default-features = false }
@@ -26,7 +29,9 @@ mz-secrets.path = "../../src/secrets"
 mz-server-core.path = "../../src/server-core"
 mz-service.path = "../../src/service"
 mz-sql.path = "../../src/sql"
+mz-storage.path = "../../src/storage"
 mz-storage-types.path = "../../src/storage-types"
+mz-txn-wal.path = "../../src/txn-wal"
 snowglobe.git = "https://github.com/teskje/snowglobe.git"
 tempfile = "3.20.0"
 tokio-postgres = "0.7.15"
