Add OIDC mock server for testing
- Introduced a new `mz-oidc-mock` package
- Implemented tests for OIDC authentication

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ members = [
     "src/mz",
     "src/mz-debug",
     "src/npm",
+    "src/oidc-mock",
     "src/orchestrator",
     "src/orchestrator-kubernetes",
     "src/orchestrator-process",
@@ -184,6 +185,7 @@ default-members = [
     "src/mz",
     "src/mz-debug",
     "src/npm",
+    "src/oidc-mock",
     "src/orchestrator",
     "src/orchestrator-kubernetes",
     "src/orchestrator-process",
