emulator: Keep fixed postgresql 18 version

--- a/misc/images/materialized-base/Dockerfile
+++ b/misc/images/materialized-base/Dockerfile
@@ -29,7 +29,7 @@ RUN groupadd --system --gid=999 materialize \
         curl \
         gettext-base \
         nginx \
-        postgresql \
+        postgresql-18 \
         ssh \
         tini \
     && if [ "$CI_SANITIZER" != "none" ]; then \
