--- a/misc/helm-charts/testing/materialize.yaml
+++ b/misc/helm-charts/testing/materialize.yaml
@@ -29,7 +29,7 @@ metadata:
   name: 12345678-1234-1234-1234-123456789012
   namespace: materialize-environment
 spec:
-  environmentdImageRef: materialize/environmentd:v26.8.0-rc.4
+  environmentdImageRef: materialize/environmentd:v26.8.0
   backendSecretName: materialize-backend
   authenticatorKind: None
   #balancerdExternalCertificateSpec:
