--- a/src/environmentd/Cargo.toml
+++ b/src/environmentd/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mz-environmentd"
 description = "Manages a single Materialize environment."
-version = "26.8.0-rc.4"
+version = "26.8.0"
 authors = ["Materialize, Inc."]
 license = "proprietary"
 edition.workspace = true
