--- a/src/orchestratord/Cargo.toml
+++ b/src/orchestratord/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mz-orchestratord"
 description = "Kubernetes operator for Materialize regions"
-version = "26.8.0-rc.4"
+version = "26.8.0"
 edition.workspace = true
 rust-version.workspace = true
 publish = false
