--- a/src/environmentd/Cargo.toml
+++ b/src/environmentd/Cargo.toml
@@ -43,7 +43,7 @@ mz-alloc = { path = "../alloc" }
 mz-alloc-default = { path = "../alloc-default", optional = true }
 mz-auth = { path = "../auth" }
 mz-authenticator = { path = "../authenticator" }
-mz-authenticator-types = { path = "../authenticator-types" }
+mz-authenticator-types = { path = "../authenticator-types", default-features = false }
 mz-aws-secrets-controller = { path = "../aws-secrets-controller" }
 mz-build-info = { path = "../build-info" }
 mz-adapter = { path = "../adapter" }
@@ -56,7 +56,7 @@ mz-dyncfg = { path = "../dyncfg" }
 mz-dyncfgs = { path = "../dyncfgs" }
 mz-frontegg-auth = { path = "../frontegg-auth" }
 mz-frontegg-mock = { path = "../frontegg-mock", optional = true }
-mz-oidc-mock = { path = "../oidc-mock", optional = true }
+mz-oidc-mock = { path = "../oidc-mock", default-features = false, optional = true }
 mz-http-util = { path = "../http-util" }
 mz-interchange = { path = "../interchange" }
 mz-license-keys = { path = "../license-keys" }
