--- a/deny.toml
+++ b/deny.toml
@@ -39,6 +39,8 @@ skip = [
     # Required by indexmap 1.9.1, which is depended on by many things
     { name = "hashbrown", version = "0.12.3" },
     { name = "hashbrown", version = "0.14.5" },
+    # Required by hashbrown
+    { name = "foldhash", version = "0.1.5" },
 
     # Had to update `tower-http` to `0.4.3` to fix the `base64` duplicate version
     # but this introduced a new dependency on `bitflags 2.3.3` but all the rest of
@@ -108,8 +110,7 @@ skip = [
     { name = "tower", version = "0.4.13" },
     # Used by tracing-capture
     { name = "predicates", version = "2.1.5" },
-    # Used by aws-config
-    # Used by aws-sdk-s3
+    # Used by aws-sdk-s3, launchdarkly-server-sdk, and hashbrown@v0.15.5
     { name = "lru", version = "0.12.5" },
     # Used by tower-lsp
     { name = "dashmap", version = "5.5.3" },
@@ -125,6 +126,9 @@ skip = [
     { name = "darling_macro", version = "0.20.11" },
     { name = "darling_core", version = "0.20.11" },
     { name = "darling", version = "0.20.11" },
+    { name = "darling_macro", version = "0.21.2" },
+    { name = "darling_core", version = "0.21.2" },
+    { name = "darling", version = "0.21.2" },
     { name = "typed-builder", version = "0.20.1" },
     { name = "typed-builder-macro", version = "0.20.1" },
     # chrono-tz
@@ -257,8 +261,6 @@ ignore = [
     "RUSTSEC-2024-0436",
     # Bincode is unmaintained, the team considers version 1.3.3 a complete version of bincode that is not in need of any updates.
     "RUSTSEC-2025-0141",
-    # Older lru versions, used by aws-sdk-s3/mysql_async dependencies
-    "RUSTSEC-2026-0002",
 ]
 
 # Must be manually kept in sync with about.toml.
