docs: reorg to use headless content instead of shared-content (pt1)

--- a/doc/user/data/postgres_source_details.yml
+++ b/doc/user/data/postgres_source_details.yml
@@ -278,5 +278,4 @@
 
     ### Modifying an existing source
 
-    {{< include-md
-    file="shared-content/alter-source-snapshot-blocking-behavior.md" >}}
+    {{% include-headless "/headless/alter-source-snapshot-blocking-behavior" %}}
